--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
-
 {
   "name": "drg-power-solar",
   "version": "1.0.0",
   "private": true,
-  "description": "Premium Solar Energy Solutions website for DRG Power Technology.",
+  "type": "module",
   "scripts": {
-    "start": "serve ."
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.0"
   }
 }
