--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
-
 {
   "version": 2,
   "cleanUrls": true,
-  "framework": null,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ],
   "headers": [
     {
       "source": "/(.*)",
